# wabble

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
app/: Cargo.toml  index.html
app/src/: app.rs  lib.rs  main.rs  systems.rs  types.rs  views.rs  widgets.rs  windows.rs
app/src/systems/: toasts.rs  windows.rs  ws.rs
app/src/systems/ws/: auth_state.rs  remember_me.rs  store.rs
app/src/types/: server_url.rs  timeout.rs
app/src/views/: login.rs  main.rs  main_menu.rs
app/src/widgets/: connection_status.rs  friend.rs  friend_info.rs  friend_list.rs  friend_request.rs  login_register.rs  profile.rs  simple_list.rs  toggle_button.rs
app/src/windows/: admin.rs  connection.rs  friend_info.rs  friend_requests.rs  profile.rs  send_friend_request.rs
app/src/windows/admin/: invites.rs
core/: Cargo.toml
core/src/: crypto.rs  game.rs  language.rs  lib.rs  types.rs  validate.rs
core/src/crypto/: secret.rs
core/src/game/: board.rs  error.rs  state.rs
core/src/game/board/: board_move.rs  bonus.rs  cell.rs  coordinates.rs  line.rs  tile.rs
core/src/game/board/bonus/: quadrants.rs
core/src/message/: client.rs  server.rs
core/src/types/: friend_info.rs  friend_request_info.rs  friendship_status.rs  language.rs  me.rs  user_permissions.rs
data/: Cargo.toml
data/src/: lib.rs  parse.rs
data/src/parse/: dictionary.rs  error.rs  kaikki.rs
docker/: .env.dist  Dockerfile  Dockerfile.ws  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.ws.yml  docker-compose.yml
server/: Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20251105_163516_init_core.rs
server/src/: config.rs  crypto.rs  database.rs  main.rs  services.rs  state.rs  stores.rs  websocket.rs
server/src/crypto/: secret.rs
server/src/database/entity/: invite_code.rs  mod.rs  prelude.rs  user.rs  user_friendship.rs  user_session.rs
server/src/database/entity_ext/: mod.rs  user.rs  user_friendship.rs
server/src/services/: friendship.rs  user.rs
server/src/stores/: invite_code.rs  user.rs  user_friendship.rs  user_session.rs
server/src/types/: user_permissions.rs
server/src/websocket/: connection.rs  connections.rs
web/: Cargo.toml
web/assets/: manifest.json
web/src/: app.rs  lib.rs  main.rs  views.rs  widgets.rs  ws.rs
web/src/widgets/: board.rs  login_register.rs
