[package]
name = "wabble-app"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
wabble-core = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
chrono = "0.4.42"
eframe = { version = "0.33.0", default-features = false, features = ["glow", "persistence", "wayland", "x11"] }
egui = "0.33.0"
egui-notify = "0.21.0"
egui-phosphor = { version = "0.10.0", features = ["regular"] }
ewebsock = "0.8.0"
log = "0.4.28"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2