[package]
name = "wabble-core"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"], optional = true }
bincode = { workspace = true }
bitflags = "2.10.0"
hex = "0.4.3"
thiserror = "2.0.17"
tracing = "0.1.41"
uuid = "1.18.1"
zeroize = { version = "1.8.2", features = ["derive"] }