[package]
name = "wabble-data"
version = "0.1.0"
edition = "2024"

[features]
default = []
parse = ["indicatif", "serde", "serde_json", "regex", "thiserror"]

[dependencies]
wabble-core = { workspace = true }
bincode = { workspace = true }
indicatif = { version = "0.18.2", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0.145", optional = true }
regex = { version = "1.12.2", optional = true }
thiserror = { workspace = true, optional = true }
zstd = { workspace = true }

[[bin]]
name = "generate"
path = "bin/generate.rs"
required-features = ["parse"]