[package]
name = "wabble-server"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "migration" }
anyhow = { workspace = true }
axum = { version = "0.8.6", features = ["ws"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
sea-orm = { version = "2.0.0-rc.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }