[package]
name = "wabble-server"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "migration" }
wabble-core = { workspace = true, features = ["argon2"] }
anyhow = { workspace = true }
axum = { version = "0.8.6", features = ["ws"] }
bincode = { workspace = true }
chrono = "0.4.42"
dashmap = "6.1.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
sea-orm = { version = "2.0.0-rc.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["v4"] }
