[package]
name = "migration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "2.0.0-rc.16", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
